text correction framework, bootstrap

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                         FrameWork
                                     </div>
                                     <div style="margin-left: 3.5vw;">
-                                        <b>bootstrap</b>
+                                        <b>Bootstrap</b>
                                         <br>
                                         <br>
                                     </div>  
@@ -499,7 +499,7 @@
                                         Java Framworks
                                     </div>
                                     <div style="margin-left: 3.5vw;">
-                                        <b>Spring Framewokr</b>
+                                        <b>Spring Framework</b>
                                         <br>
                                         <br>
                                     </div>  
