fix link open black page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <table>
                 <tr>
                     <td><img src="images/icons/icons8-facebook-48.png" style="width: 2vw;"></td>
-                    <td class="mediaLinks"><a href="https://www.facebook.com/Freetot007">Angelo Orale on FB</a></td>
+                    <td class="mediaLinks"><a href="https://www.facebook.com/Freetot007" target="_blank">Angelo Orale on FB</a></td>
                 </tr>
                 <tr>
                     <td><img src="images/icons/icons8-gmail-logo-48.png" style="width: 1.5vw;"></td>
@@ -951,7 +951,7 @@
                 <table>
                     <tr>
                         <td><img src="images/icons/icons8-facebook-48.png" style="width: 2vw;"></td>
-                        <td class="mediaLinks"><a href="https://www.facebook.com/Freetot007">Angelo Orale on FB</a></td>
+                        <td class="mediaLinks"><a href="https://www.facebook.com/Freetot007" target="_blank">Angelo Orale on FB</a></td>
                         <td><img src="images/icons/icons8-gmail-logo-48.png" style="width: 1.5vw;"></td>
                         <td class="mediaLinks">oraleangelo@gmail.com</td>
                         <td><img src="images/icons/icons8-rotary-dial-telephone-48.png" style="width: 1.5vw;"></td>
